--- a/Training/Visual-C-Sharp/Packt-Sec5/DependencyInjNoMVC/DependencyInjNoMVC.csproj
+++ b/Training/Visual-C-Sharp/Packt-Sec5/DependencyInjNoMVC/DependencyInjNoMVC.csproj
@@ -8,4 +8,12 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Data\" />
+    <Folder Include="Models\" />
+    <Folder Include="Views\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
